# degime_backend

./: Database.py  README.md  db.sqlite3  requirements.txt
home/ubuntu/degime-backend/: .env.example  .eslintrc  .nvmrc  .prettierrc  LICENSE  README.md  cls  db.sqlite3  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
home/ubuntu/degime-backend/Degime_backend/: settings.py  urls.py
home/ubuntu/degime-backend/chat_app/: consumers.py  models.py  routing.py  serializers.py  urls.py  views.py
home/ubuntu/degime-backend/chat_app/migrations/: 0001_initial.py
home/ubuntu/degime-backend/sales_backend/: admin.py  apps.py  models.py  urls.py  views.py
home/ubuntu/degime-backend/settings_app/: admin.py  models.py  serializers.py  urls.py  views.py
home/ubuntu/degime-backend/shipping_app/: admin.py  models.py  serializers.py  urls.py  views.py
home/ubuntu/degime-backend/shop_app/: admin.py  apps.py  models.py  mongodb_utils.py  serializers.py  settings.py  urls.py  views.py
home/ubuntu/degime-backend/shop_app/migrations/: 0001_initial.py  0002_rename_title_product_product_name_and_more.py
home/ubuntu/degime-backend/social_app/: views.py
home/ubuntu/degime-backend/social_app/migrations/: 0001_initial.py
home/ubuntu/degime-backend/src/: index.js  index.ts
home/ubuntu/degime-backend/src/@types/: global.d.ts
home/ubuntu/degime-backend/src/constants/: index.ts
home/ubuntu/degime-backend/src/contracts/: auth.ts  businessProfile.ts  cart.ts  (+13 more)
home/ubuntu/degime-backend/user_app/: models.py  urls.py  utils.py  views.py
(+129 files in other folders)
