[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "DeGime"
authors = [
    {name = "Yoshiaki Danaka", email = ""},
]
description = "DeGime Social App"
readme = ""
requires-python = ">=3.8"
keywords = ["DeGime", "NFC Card"]
license = {text = ""}
classifiers = [
    "Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests",
    'importlib-metadata; python_version<"3.10"',
    'Django == 5.0.1',
    'django-cors-headers == 4.3.1'
    'django-rest-framework == 0.1.0'
    'pymongo == 3.12.3'
    'channels == 4.0.0'
    'coreapi == 2.3.3'
    'daphne == 4.0.0'
]
dynamic = ["2024.2.8"]
